// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers activityReducer should correctly changeFilter 1`] = `
Object {
  "activityLoadingError": null,
  "filter": undefined,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
    },
    Object {
      "key": "SENT_ACTIVITY",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
    },
    Object {
      "key": "PENDING_ACTIVITY",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
    },
  ],
  "isActivityLoading": false,
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly hideActivityModal 1`] = `
Object {
  "activityLoadingError": null,
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
    },
    Object {
      "key": "SENT_ACTIVITY",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
    },
    Object {
      "key": "PENDING_ACTIVITY",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
    },
  ],
  "isActivityLoading": false,
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly showActivityModal 1`] = `
Object {
  "activityLoadingError": null,
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
    },
    Object {
      "key": "SENT_ACTIVITY",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
    },
    Object {
      "key": "PENDING_ACTIVITY",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
    },
  ],
  "isActivityLoading": false,
  "modal": Object {
    "itemId": undefined,
    "itemType": undefined,
  },
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly updateSearchText 1`] = `
Object {
  "activityLoadingError": null,
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
    },
    Object {
      "key": "SENT_ACTIVITY",
    },
    Object {
      "key": "RECEIVED_ACTIVITY",
    },
    Object {
      "key": "PENDING_ACTIVITY",
    },
    Object {
      "key": "EXPIRED_ACTIVITY",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
    },
  ],
  "isActivityLoading": false,
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchText": undefined,
  "showExpiredRequests": false,
}
`;
